# NLP-Virtual-Lab

./: .gitignore  Procfile  README.md  app_single.py  cgi.py  git.md  main.py  models.py  nlp_processor.py  pyproject.toml  requirements.txt  routes.py  start.sh  vercel.json
instance/: nlp_lab.db
scripts/: download_nltk_data.py
static/css/: style.css
static/js/: lab.js  main.js  quiz.js  visualizations.js
templates/: base.html  chatbot.html  index.html  lab.html  quiz.html  readme.html
