[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.1",
    "werkzeug>=3.1.3",
]
